--- a/index.html
+++ b/index.html
@@ -2,17 +2,28 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="layout.css">
-        <title> Github Pages</title>
+        <title>Personal website</title>
+        <link rel="stylesheet" href="CSS/styles.css">
     </head>
+<body>
     <header>
-        <h1>Test h1</h1>
+    <nav>
+        <ul>
+            <li><a class="active" href="index.html">Home</a></li>
+            <li><a href="straightline.html">Fit a straight line</a></li>
+            <li><a href="thissite.html">This site</a></li>
+        </ul>
+    </nav>
     </header>
-    <body>
-        <main>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, assumenda nemo ullam dignissimos accusamus esse repudiandae aperiam labore, doloremque nihil consequatur natus earum nobis laudantium. Excepturi ex dolores sunt animi.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, assumenda nemo ullam dignissimos accusamus esse repudiandae aperiam labore, doloremque nihil consequatur natus earum nobis laudantium. Excepturi ex dolores sunt animi.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, assumenda nemo ullam dignissimos accusamus esse repudiandae aperiam labore, doloremque nihil consequatur natus earum nobis laudantium. Excepturi ex dolores sunt animi.
-        </main>
-    </body>
+    <main>
+    <h1>Bio</h1>
+    <p>
+    Hello, my name is Will Yeadon. This website is quite new and I am experimenting with its creation. I currently work as a Teaching Fellow at Durham University in the Physics Department.
+
+    If you want to contact me, you can email me at <a href="mailto:will.yeadon@durham.ac.uk">will.yeadon@durham.ac.uk</a>  
+    </p>
+    <img src="images/scotland-1.jpg" alt="photo of the author" class="centeredImage">
+    
+    </main>
+</body>
 </html>
