--- a/straightline.html
+++ b/straightline.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Fit a straight line</title>
-        <link rel="stylesheet" href="CSS/styles.css">
+        <link rel="stylesheet" href="css/styles.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.0.3/highlight.min.js"></script>
         <script>hljs.initHighlightingOnLoad();</script>
     </head>
