--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Personal website</title>
-        <link rel="stylesheet" href="CSS/styles.css">
+        <link rel="stylesheet" href="css/styles.css">
     </head>
 <body>
     <header>
