--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </header>
     <main>
     <div class="col-12">
-    <h1 id="carousel-header">Feel free to take a ride on the carousel</h1>-->
+    <h1 id="carousel-header">Feel free to take a ride on the carousel</h1>
     </div> 
         <div id="carousel-index" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
