--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
     </nav>
 
-    <header class="jumbotron">
+    <header class="jumbotron" id = jumbo>
         <div class="container">
             <div class="row row-header">
                 <div class="col-12 col-sm-6">
